testsuite/tests/properties/invalid_dflt_arg_val/bad_literal_1.lkt
import common

class Example: FooNode {
    @exported fun p(a: Example=node): FooNode = a
}
